--- a/Pages/solicitudes.html
+++ b/Pages/solicitudes.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Solicitudes</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
-        <div class="logo">LOGO</div>
+        <div class="logo"><a href="./index.html">LOGO</a></div>
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -24,7 +29,8 @@
             <h2 class="hero-title">SOLICITUDES</h2>
             <img src="../img/hero-solicitudes.jpg" alt="Hero Solicitudes">
         </section>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi
+            nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
         <div class="grid grid-2" style="align-items: center; justify-content: center;">
             <div>
                 <img src="../img/placeholder.jpg" alt="Solicitud 1">
@@ -59,9 +65,12 @@
                 <li><a href="./vacaciones.html">Vacaciones</a></li>
             </ul>
         </nav>
-       <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco" width="300" height="150" style="border:0;"></iframe>
+        <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco"
+                width="300" height="150" style="border:0;"></iframe>
         </div>
     </footer>
 </body>
+
 </html>
