--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
-        <div class="logo">LOGO</div>
-        <nav>
+        <div class="logo"><a href="./index.html">LOGO</a></div>
+
+        <nav class="navbar bg-body-tertiary">
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./Pages/noticias.html">Noticias</a></li>
@@ -18,52 +27,108 @@
                 <li><a href="./Pages/vacaciones.html">Vacaciones</a></li>
             </ul>
         </nav>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
-        <section class="hero" >
+        <section class="hero">
             <img src="./img/hero-home.jpg" alt="Hero Imagen">
         </section>
+
+        <div id="carouselExample" class="carousel slide hero">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/hero-home.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/placeholder.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/placeholder.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+
         <h1>¡Hola!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
-        <div class="grid" style="align-items: center; justify-content: center;">
-            <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi
+            nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
+
+        <div class="container grid" style="align-items: center; justify-content: center;">
+            <div class="col-sm-12 col-md-4">
                 <h3>Noticias</h3>
                 <a href="./Pages/noticias.html">
-                <img src="./img/placeholder.jpg" alt="Item 1">
+                    <img src="./img/placeholder.jpg" alt="Item 1">
                 </a>
             </div>
-            <div>
+            <div class="col-sm-12 col-md-4">
                 <h3>Políticas</h3>
                 <a href="./Pages/politicas.html">
-                <img src="./img/placeholder.jpg" alt="Item 2">
+                    <img src="./img/placeholder.jpg" alt="Item 2">
                 </a>
             </div>
-            <div>
+            <div class="col-sm-12 col-md-4">
                 <h3>Beneficios</h3>
                 <a href="./Pages/beneficios.html">
-                <img src="./img/placeholder.jpg" alt="Item 3">
+                    <img src="./img/placeholder.jpg" alt="Item 3">
                 </a>
             </div>
         </div>
-        <div class="grid" style="align-items: center; justify-content: center;"> 
-            <div>
+
+
+
+        <div class="container grid" style="align-items: center; justify-content: center;">
+            <div class="col-sm-12 col-md-4">
                 <h3>Solicitudes</h3>
                 <a href="./Pages/solicitudes.html">
-                <img src="./img/placeholder.jpg" alt="Item 4">
+                    <img src="./img/placeholder.jpg" alt="Item 4">
                 </a>
             </div>
-            <div>
+            <div class="col-sm-12 col-md-4">
                 <h3>Vacaciones</h3>
                 <a href="./Pages/vacaciones.html">
-                <img src="./img/placeholder.jpg" alt="Item 5">
+                    <img src="./img/placeholder.jpg" alt="Item 5">
                 </a>
             </div>
-            <div>
+            <div class="col-sm-12 col-md-4">
                 <h3>Lorem Ipsum</h3>
                 <a href="#">
-                <img src="./img/placeholder.jpg" alt="Item 6">
+                    <img src="./img/placeholder.jpg" alt="Item 6">
                 </a>
-        </div>
+            </div>
     </main>
     <footer>
         <div class="footer-logo">LOGO</div>
@@ -79,8 +144,11 @@
             </ul>
         </nav>
         <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco" width="300" height="150" style="border:0;"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco"
+                width="300" height="150" style="border:0;"></iframe>
         </div>
     </footer>
 </body>
+
 </html>
