--- a/index.html
+++ b/index.html
@@ -17,47 +17,31 @@
     <header>
         <div class="logo"><a href="./index.html">LOGO</a></div>
 
-        <nav class="navbar bg-body-tertiary">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./Pages/noticias.html">Noticias</a></li>
-                <li><a href="./Pages/politicas.html">Políticas</a></li>
-                <li><a href="./Pages/beneficios.html">Beneficios</a></li>
-                <li><a href="./Pages/solicitudes.html">Solicitudes</a></li>
-                <li><a href="./Pages/vacaciones.html">Vacaciones</a></li>
-            </ul>
-        </nav>
-
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
+
+                        <li class="nav-item"> <a class="nav-link active" aria-current="page"
+                                href="./index.html">Home</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./Pages/noticias.html">Noticias</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./Pages/politicas.html">Políticas</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./Pages/beneficios.html">Beneficios</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./Pages/solicitudes.html">Solicitudes</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./Pages/vacaciones.html">Vacaciones</a> </li>
+
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <img src="./img/hero-home.jpg" alt="Hero Imagen">
-        </section>
 
         <div id="carouselExample" class="carousel slide hero">
             <div class="carousel-inner">
@@ -65,10 +49,10 @@
                     <img src="./img/hero-home.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/placeholder.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/hero-home-2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/placeholder.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/hero-home-3.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -82,28 +66,31 @@
         </div>
 
 
+        <div class="container" style="align-items: center; justify-content: center;">
+            <h1>¡Bienvenido a tu Call Center Genérico!</h1>
+            <p>Ofrecemos soluciones integrales de tercerización en atención al cliente, adaptadas a las necesidades de
+                cada empresa. Nuestro equipo se especializa en optimizar procesos, reducir costos operativos y
+                garantizar una experiencia de servicio excepcional para tus clientes.</p>
 
-        <h1>¡Hola!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi
-            nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
-
-        <div class="container grid" style="align-items: center; justify-content: center;">
+                <b> <p>Esta web está enfocada en brindar información corporativa a nuestros colaboradores</p></b>
+        </div>
+        <div class="container grid" style="align-items: center; justify-content: center; margin-top: 5vh;">
             <div class="col-sm-12 col-md-4">
                 <h3>Noticias</h3>
                 <a href="./Pages/noticias.html">
-                    <img src="./img/placeholder.jpg" alt="Item 1">
+                    <img src="./img/section-noticias.jpg" alt="Item 1">
                 </a>
             </div>
             <div class="col-sm-12 col-md-4">
                 <h3>Políticas</h3>
                 <a href="./Pages/politicas.html">
-                    <img src="./img/placeholder.jpg" alt="Item 2">
+                    <img src="./img/section-politicas.jpg" alt="Item 2">
                 </a>
             </div>
             <div class="col-sm-12 col-md-4">
                 <h3>Beneficios</h3>
                 <a href="./Pages/beneficios.html">
-                    <img src="./img/placeholder.jpg" alt="Item 3">
+                    <img src="./img/section-beneficios.jpg" alt="Item 3">
                 </a>
             </div>
         </div>
@@ -114,39 +101,42 @@
             <div class="col-sm-12 col-md-4">
                 <h3>Solicitudes</h3>
                 <a href="./Pages/solicitudes.html">
-                    <img src="./img/placeholder.jpg" alt="Item 4">
+                    <img src="./img/section-solicitudes.jpg" alt="Item 4">
                 </a>
             </div>
             <div class="col-sm-12 col-md-4">
                 <h3>Vacaciones</h3>
                 <a href="./Pages/vacaciones.html">
-                    <img src="./img/placeholder.jpg" alt="Item 5">
+                    <img src="./img/section-vacaciones.jpg" alt="Item 5">
                 </a>
             </div>
-            <div class="col-sm-12 col-md-4">
-                <h3>Lorem Ipsum</h3>
-                <a href="#">
-                    <img src="./img/placeholder.jpg" alt="Item 6">
-                </a>
-            </div>
+
     </main>
     <footer>
-        <div class="footer-logo">LOGO</div>
-        <div class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-        <nav class="footer-menu">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./Pages/noticias.html">Noticias</a></li>
-                <li><a href="./Pages/politicas.html">Políticas</a></li>
-                <li><a href="./Pages/beneficios.html">Beneficios</a></li>
-                <li><a href="./Pages/solicitudes.html">Solicitudes</a></li>
-                <li><a href="./Pages/vacaciones.html">Vacaciones</a></li>
-            </ul>
-        </nav>
-        <div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco"
-                width="300" height="150" style="border:0;"></iframe>
+        <div class="footer-div">
+            <div class="logo"><a href="./index.html">LOGO</a></div>
+            <div class="footer-text">
+                Somos tu socio estratégico en tercerización, ofreciendo soluciones flexibles y
+                confiables que optimizan tus procesos y fortalecen la relación con tus clientes.
+            </div>
+            <nav class="footer-menu">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./Pages/noticias.html">Noticias</a></li>
+                    <li><a href="./Pages/politicas.html">Políticas</a></li>
+                    <li><a href="./Pages/beneficios.html">Beneficios</a></li>
+                    <li><a href="./Pages/solicitudes.html">Solicitudes</a></li>
+                    <li><a href="./Pages/vacaciones.html">Vacaciones</a></li>
+                </ul>
+            </nav>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco" width="300" height="150" style="border:0;"></iframe>
+            </div>
+        </div>
+
+        <!-- Barra Copyright separada -->
+        <div class="footer-bottom">
+            <p>&copy; 2025 Empresa Dummy de Tercerización para Coder lol. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
