--- a/Pages/beneficios.html
+++ b/Pages/beneficios.html
@@ -1,58 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Beneficios del Empleado</title>
     <link rel="stylesheet" href="../css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
-        <div class="logo"><a href="./index.html">LOGO</a></div>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./Pages/noticias.html">Noticias</a></li>
-                <li><a href="./Pages/politicas.html">Políticas</a></li>
-                <li><a href="./Pages/beneficios.html">Beneficios</a></li>
-                <li><a href="./Pages/solicitudes.html">Solicitudes</a></li>
-                <li><a href="./Pages/vacaciones.html">Vacaciones</a></li>
-            </ul>
+        <div class="logo"><a href="../index.html">LOGO</a></div>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item"> <a class="nav-link active" aria-current="page"
+                                href="../index.html">Home</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./noticias.html">Noticias</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./politicas.html">Políticas</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./beneficios.html">Beneficios</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./solicitudes.html">Solicitudes</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="./vacaciones.html">Vacaciones</a> </li>
+
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    <main>
+    <main style="margin-top: 2vh;">
         <section class="hero">
             <h2 class="hero-title">BENEFICIOS DEL EMPLEADO</h2>
             <img src="../img/hero-beneficios.jpg" alt="Hero Beneficios">
         </section>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
-        <div class="grid grid-2" style="align-items: center; justify-content: center;">
-            <div><img src="../img/placeholder.jpg" alt="Beneficio 1"></div>
-            <div><img src="../img/placeholder.jpg" alt="Beneficio 2"></div>
+
+        <p style="margin-top: 5vh; margin-bottom: 5vh;">Acá les listamos los beneficios que, como compañía benévola que
+            somos, les damos para asegurar un ambiente armónico y feliz a nuestros trabajadores</p>
+
+        <div class="card-group" style="text-align: center;">
+            <div class="card">
+                <img src="../img/politicas.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pago oportuno</h5>
+                    <p class="card-text">Consideramos que es un gran beneficio para nuestros empleados poder tener su
+                        pago el día que es</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+
+            <div class="card" style="text-align: center;">
+                <img src="../img/politicas.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pizza mensual</h5>
+                    <p class="card-text">Pizzas mensuales para todos los empleados, porque sabemos que el carbohidrato
+                        es la base de la pirámide alimenticia, para que se pongan la camiseta por la empresa, y porque
+                        la pizza es vida
+                    </p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="../img/politicas.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center;">Poder ir al baño</h5>
+                    <p class="card-text">Les damos a nuestros empleados la oportunidad (cronometrada, claro está) de
+                        ausentarse para hacer sus necesidades, 3 minutos cada 4 horas</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+
         </div>
-        <div class="grid grid-2" style="align-items: center; justify-content: center;">
-            <div><img src="../img/placeholder.jpg" alt="Beneficio 3"></div>
-            <div><img src="../img/placeholder.jpg" alt="Beneficio 4"></div>
-        </div>
+
     </main>
     <footer>
-        <div class="footer-logo">LOGO</div>
-        <div class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-        <nav class="footer-menu">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./noticias.html">Noticias</a></li>
-                <li><a href="./politicas.html">Políticas</a></li>
-                <li><a href="./beneficios.html">Beneficios</a></li>
-                <li><a href="./solicitudes.html">Solicitudes</a></li>
-                <li><a href="./vacaciones.html">Vacaciones</a></li>
-            </ul>
-        </nav>
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco" width="300" height="150" style="border:0;"></iframe>
+        <div class="footer-div">
+            <div class="logo"><a href="./index.html">LOGO</a></div>
+            <div class="footer-text">
+                Somos tu socio estratégico en tercerización, ofreciendo soluciones flexibles y
+                confiables que optimizan tus procesos y fortalecen la relación con tus clientes.
+            </div>
+            <nav class="footer-menu">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./noticias.html">Noticias</a></li>
+                    <li><a href="./politicas.html">Políticas</a></li>
+                    <li><a href="./beneficios.html">Beneficios</a></li>
+                    <li><a href="./solicitudes.html">Solicitudes</a></li>
+                    <li><a href="./vacaciones.html">Vacaciones</a></li>
+                </ul>
+            </nav>
+            <div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18867.079829336464!2d-75.56616693068261!3d6.222137171746717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429c54fe5652d%3A0x5363838972b34e50!2sAeropuerto%20Olaya%20Herrera!5e0!3m2!1ses-419!2sco!4v1755317594907!5m2!1ses-419!2sco"
+                    width="300" height="150" style="border:0;"></iframe>
+            </div>
+        </div>
+
+        <!-- Barra Copyright separada -->
+        <div class="footer-bottom">
+            <p>&copy; 2025 Empresa Dummy de Tercerización para Coder lol. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
+
 </html>
