--- a/Pages/noticias.html
+++ b/Pages/noticias.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Noticias</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -15,7 +15,11 @@
 
 <body>
     <header>
-        <div class="logo"><a href="./index.html">LOGO</a></div>
+        <div class="logo">
+            <a href="../index.html">
+                <img src="../img/logocall.png" alt="LOGO">
+            </a>
+        </div>
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -53,9 +57,11 @@
 
         <div class="noticias-list">
             <div class="noticia-caja">
-                <img src="../img/section-noticias.jpg" alt="Noticia 1">
+                <img src="../img/estrategia.jpg" alt="Noticia 1">
                 <div class="noticia-contenido">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p><b>Nueva alianza estratégica</b><br>
+                        Nuestra empresa anuncia una alianza con un socio internacional para fortalecer los servicios de
+                        tercerización y ampliar la cobertura a nuevos mercados.</p>
                     <a href="#" class="leer-mas">Leer Más...</a>
                 </div>
             </div>
@@ -65,9 +71,11 @@
 
         <div class="noticias-list">
             <div class="noticia-caja">
-                <img src="../img/section-noticias.jpg" alt="Noticia 2">
+                <img src="../img/expansion.jpg" alt="Noticia 2">
                 <div class="noticia-contenido">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p><b>Expansión de operaciones</b><br>
+                        Con el objetivo de seguir creciendo, abrimos una nueva sede operativa que permitirá atender a
+                        más clientes con mayor eficiencia.</p>
                     <a href="#" class="leer-mas">Leer Más...</a>
                 </div>
             </div>
@@ -76,9 +84,11 @@
 
         <div class="noticias-list">
             <div class="noticia-caja">
-                <img src="../img/section-noticias.jpg" alt="Noticia 3">
+                <img src="../img/excelencia.jpg" alt="Noticia 3">
                 <div class="noticia-contenido">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p><b>Reconocimiento a la excelencia</b><br>
+                        Hemos sido galardonados por la Cámara de Comercio local por nuestro compromiso con la calidad en
+                        el servicio y la innovación en procesos.</p>
                     <a href="#" class="leer-mas">Leer Más...</a>
                 </div>
             </div>
@@ -89,7 +99,11 @@
     </main>
     <footer>
         <div class="footer-div">
-            <div class="logo"><a href="./index.html">LOGO</a></div>
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../img/logocall.png" alt="LOGO">
+                </a>
+            </div>
             <div class="footer-text">
                 Somos tu socio estratégico en tercerización, ofreciendo soluciones flexibles y
                 confiables que optimizan tus procesos y fortalecen la relación con tus clientes.
