--- a/Pages/solicitudes.html
+++ b/Pages/solicitudes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Solicitudes</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -15,7 +15,11 @@
 
 <body>
     <header>
-        <div class="logo"><a href="./index.html">LOGO</a></div>
+        <div class="logo">
+            <a href="../index.html">
+                <img src="../img/logocall.png" alt="LOGO">
+            </a>
+        </div>
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -52,28 +56,32 @@
             
         <div class="grid grid-2" style="align-items: center; justify-content: center;">
             <div>
-                <img src="../img/placeholder.jpg" alt="Solicitud 1">
+                <img src="../img/ausencia.jpg" alt="Solicitud 1">
                 <p>Permiso de ausencia</p>
             </div>
             <div>
-                <img src="../img/placeholder.jpg" alt="Solicitud 2">
+                <img src="../img/emergencia.jpg" alt="Solicitud 2">
                 <p>Permiso por emergencia</p>
             </div>
         </div>
         <div class="grid grid-2" style="align-items: center; justify-content: center;">
             <div>
-                <img src="../img/placeholder.jpg" alt="Solicitud 3">
+                <img src="../img/permiso.jpg" alt="Solicitud 3">
                 <p>Permiso para pedir un permiso</p>
             </div>
             <div>
-                <img src="../img/placeholder.jpg" alt="Solicitud 4">
+                <img src="../img/permise.jpg" alt="Solicitud 4">
                 <p>Permise 💅</p>
             </div>
         </div>
     </main>
     <footer>
         <div class="footer-div">
-            <div class="logo"><a href="./index.html">LOGO</a></div>
+            <div class="logo">
+            <a href="../index.html">
+                <img src="../img/logocall.png" alt="LOGO">
+            </a>
+        </div>
             <div class="footer-text">
                 Somos tu socio estratégico en tercerización, ofreciendo soluciones flexibles y
                 confiables que optimizan tus procesos y fortalecen la relación con tus clientes.
