--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -15,7 +15,11 @@
 
 <body>
     <header>
-        <div class="logo"><a href="./index.html">LOGO</a></div>
+        <div class="logo">
+            <a href="#">
+                <img src="./img/logocall.png" alt="LOGO">
+            </a>
+        </div>
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -114,7 +118,11 @@
     </main>
     <footer>
         <div class="footer-div">
-            <div class="logo"><a href="./index.html">LOGO</a></div>
+            <div class="logo">
+            <a href="#">
+                <img src="./img/logocall.png" alt="LOGO">
+            </a>
+        </div>
             <div class="footer-text">
                 Somos tu socio estratégico en tercerización, ofreciendo soluciones flexibles y
                 confiables que optimizan tus procesos y fortalecen la relación con tus clientes.
