--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
 
 
         <div class="container" style="align-items: center; justify-content: center;">
-            <h1>¡Bienvenido a tu Call Center Genérico!</h1>
-            <p>Ofrecemos soluciones integrales de tercerización en atención al cliente, adaptadas a las necesidades de
-                cada empresa. Nuestro equipo se especializa en optimizar procesos, reducir costos operativos y
-                garantizar una experiencia de servicio excepcional para tus clientes.</p>
+            <h1>¡Bienvenido a Call Center Generi.co!</h1>
+            <p>Ofrecemos soluciones integrales de tercerización en atención al cliente, diseñadas para adaptarse a las necesidades específicas de cada empresa. Nuestro equipo de expertos se enfoca en optimizar procesos, reducir costos operativos y garantizar una experiencia de servicio excepcional que fortalezca la relación entre tu marca y tus clientes. <br><br> Además, implementamos estrategias personalizadas de soporte multicanal, combinando tecnología, análisis de datos y talento humano para mejorar la satisfacción del cliente y aumentar la eficiencia operativa. Con nosotros, tu empresa obtiene un aliado estratégico que impulsa el crecimiento y la fidelización.</p>
 
                 <b> <p>Esta web está enfocada en brindar información corporativa a nuestros colaboradores</p></b>
         </div>
