--- a/src/features/beneficios.html
+++ b/src/features/beneficios.html
@@ -50,10 +50,19 @@
             <h2 class="hero-title">BENEFICIOS DEL EMPLEADO</h2>
             <img src="../assets/img/hero-beneficios.jpg" alt="Hero Beneficios">
         </section>
+        <div class="container" style="align-items: center; justify-content: center;">
+            <p style="margin-top: 5vh; margin-bottom: 5vh;">En nuestra empresa promovemos el bienestar y la satisfacción
+                laboral de nuestro equipo. Por eso, ofrecemos una amplia gama de beneficios corporativos diseñados para
+                asegurar un ambiente de trabajo armónico, saludable y productivo. Creemos que el éxito de una
+                organización
+                comienza con el bienestar de las personas que la conforman. <br><br>
 
-        <p style="margin-top: 5vh; margin-bottom: 5vh;">Acá les listamos los beneficios que, como compañía benévola que
-            somos, les damos para asegurar un ambiente armónico y feliz a nuestros trabajadores</p>
-
+                Nuestros programas de beneficios laborales incluyen incentivos, capacitaciones continuas y espacios que
+                fomentan la colaboración y el equilibrio entre la vida personal y profesional. Trabajamos cada día para
+                construir una cultura organizacional positiva donde nuestros colaboradores se sientan valorados,
+                motivados y
+                orgullosos de crecer junto a nosotros.</p>
+        </div>
         <div class="card-group" style="text-align: center;">
             <div class="card">
                 <img src="../assets/img/pago.jpg" class="card-img-top" alt="...">
