--- a/src/features/gracias.html
+++ b/src/features/gracias.html
@@ -50,8 +50,7 @@
             <img src="../assets/img/hero-gracias.jpg" alt="Hero Gracias">
         </section>
         <h2>¡GRACIAS!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod, urna eu tincidunt consectetur, nisi
-            nisl aliquam enim, nec dictum nisi nisl euismod enim.</p>
+        <p>Gracias por llenar el formulario</p>
         <button href="../index.html" class="btn-home">Volver al Home</a>
     </main>
     <footer>
