--- a/src/features/noticias.html
+++ b/src/features/noticias.html
@@ -50,11 +50,23 @@
             <h2 class="hero-title">NOTICIAS</h2>
             <img src="../assets/img/hero-noticias.jpg" alt="Hero Noticias">
         </section>
+        <div class="container" style="align-items: center; justify-content: center;">
+            <p style="margin-top: 5vh; margin-bottom: 5vh;">En esta sección podrás conocer todas las noticias y
+                novedades
+                actuales de nuestra compañía, así como los próximos eventos y actualizaciones internas. Creemos que
+                mantener
+                a nuestro equipo informado fortalece la comunicación y el sentido de pertenencia dentro de la
+                organización.
+                <br><br>
 
-        <p style="margin-top: 5vh; margin-bottom: 5vh;">Acá podrás conocer todas las noticias actuales y venideras de
-            Lituania, Letonia y Estonia, porque sabemos que un trabajador educado es un trabajador feliz. <b><br> Ah, y
-                tambien ponemos la fecha de la pizza mensual :) 🍕</b></p>
-
+                Nuestro compromiso es fomentar la transparencia y la participación activa de cada colaborador,
+                compartiendo
+                información relevante sobre logros, iniciativas, proyectos y actividades corporativas. Porque sabemos
+                que un
+                trabajador informado es un trabajador motivado y feliz, te invitamos a mantenerte al día con todo lo que
+                sucede en nuestra empresa. <b><br> Ah, y tambien ponemos la fecha de la pizza mensual :) 🍕</b>
+            </p>
+        </div>
         <div class="noticias-list">
             <div class="noticia-caja">
                 <img src="../assets/img/estrategia.jpg" alt="Noticia 1">
