--- a/src/features/politicas.html
+++ b/src/features/politicas.html
@@ -51,10 +51,18 @@
             <h2 class="hero-title">POLÍTICAS Y PROCEDIMIENTOS</h2>
             <img src="../assets/img/hero-politicas.jpg" alt="Hero Políticas">
         </section>
+        <div class="container" style="align-items: center; justify-content: center;">
+            <p style="margin-top: 5vh; margin-bottom: 5vh;">En esta sección encontrarás todas nuestras políticas y
+                procedimientos internos, diseñados para garantizar el cumplimiento normativo y promover un ambiente
+                laboral
+                transparente, ordenado y responsable. Nuestro objetivo es asegurar que cada colaborador conozca y
+                aplique
+                las directrices que rigen el buen funcionamiento de la empresa.<br><br>
 
-        <p style="margin-top: 5vh; margin-bottom: 5vh;">Políticas y procedimientos, para que nuestros trabajadores estén
-            en regla, como debe ser 📏🔫</p>
-
+                Contar con procesos claros y actualizados nos permite mantener altos estándares de calidad, seguridad y
+                ética profesional. De esta forma, fortalecemos la cultura organizacional y aseguramos que todos los
+                trabajadores estén en regla, alineados con los valores y objetivos de la compañía. </p>
+        </div>
         <div class="grid" style="align-items: center; justify-content: center;">
             <div><img src="../assets/img/confidencial.jpg" alt="Política 1">
 
