--- a/src/features/solicitudes.html
+++ b/src/features/solicitudes.html
@@ -51,10 +51,19 @@
             <img src="../assets/img/hero-solicitudes.jpg" alt="Hero Solicitudes">
         </section>
 
+        <div class="container" style="align-items: center; justify-content: center;">
+            <p style="margin-top: 5vh; margin-bottom: 5vh;">En este espacio, nuestros colaboradores pueden realizar
+                solicitudes laborales de manera rápida y sencilla. Ya sea para pedir permisos, reportar ausencias o
+                gestionar requerimientos administrativos, ponemos a tu disposición un canal ágil y transparente que
+                facilita
+                la comunicación interna.<br><br>
 
-        <p style="margin-top: 5vh; margin-bottom: 5vh;">Por acá el empleado nos puede pedir un permiso o lo que se le
-            cante. <b> <br>OJO, accidentes o emergencias se tienen que avisar con 15 días de antelación</b></p>
-
+                Nuestro compromiso es brindar una atención oportuna y eficiente a cada solicitud, garantizando el
+                cumplimiento de los procesos internos y el bienestar de todo el equipo. Porque entendemos que una buena
+                gestión comienza con la escucha y el apoyo a nuestros empleados. <b> <br>OJO, accidentes o emergencias
+                    se
+                    tienen que avisar con 15 días de antelación</b></p>
+        </div>
 
         <div class="grid grid-2" style="align-items: center; justify-content: center;">
             <div>
