--- a/src/features/vacaciones.html
+++ b/src/features/vacaciones.html
@@ -51,10 +51,16 @@
             <img src="../assets/img/hero-vacaciones.jpg" alt="Hero Vacaciones">
         </section>
 
+        <div class="container" style="align-items: center; justify-content: center;">
+            <p style="margin-top: 5vh; margin-bottom: 5vh;">En esta sección podrás gestionar tus vacaciones de forma
+                fácil y
+                transparente, consultando tu saldo disponible y realizando solicitudes según la planificación interna de la empresa. Creemos que el descanso es fundamental para el bienestar y el rendimiento laboral, por eso
+                promovemos una gestión organizada y equitativa del tiempo libre.<br><br>
 
-        <p style="margin-top: 5vh; margin-bottom: 5vh;">Esto lo tenemos acá por requisitos del ministerio, pero les va a
-            dar vacaciones su madre. Tú tiene que tlabajá 📏</p>
-
+                Nuestro objetivo es garantizar que cada colaborador disfrute de sus días de descanso con tranquilidad y sin complicaciones administrativas. Un equipo que descansa bien vuelve con más energía, motivación y
+                creatividad
+                para seguir construyendo juntos el éxito de la compañía.</p>
+        </div>
         <div class="container grid" style="display: block;">
             <div class="vacaciones-form-img" style="padding: 35px 35px 35px 35px;">
                 <div class="vacaciones-form">
